# skychess

./: .config  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Board.cpp.168C0C142B6EC109.idx  Board.hpp.5419513EAA6FC8CB.idx  BoardTests.cpp.79421F988611B220.idx  Controller.cpp.AAA6A9754BF2A57E.idx  Controller.hpp.911D8ABD33739557.idx  GeneratorTests.cpp.C014703B74172804.idx  Move.cpp.C7E81A8A06F61560.idx  Move.hpp.A3E36849A23F129B.idx  MoveGenerator.cpp.89AA9A70612D5EF3.idx  MoveGenerator.hpp.80875EDB1E08DDFB.idx  MoveTests.cpp.AED9F54840A4B031.idx  Renderer.cpp.8A420B92CFA117A5.idx  Renderer.hpp.DA28190EA5306AFA.idx  Square.hpp.8ADDF7ABD43A69EE.idx  TestMain.cpp.675D72F18F63308C.idx  main.cpp.E164F972FDBE5AC4.idx
.github/workflows/: ci.yml
include/: Board.hpp  engine.hpp
include/engine/: Board.hpp  Controller.hpp  GameState.hpp  Move.hpp  MoveGenerator.hpp  Square.hpp  engine.hpp
include/gui/: .null-ls_122756_Renderer.hpp  Renderer.hpp
src/: engine.cpp  main.cpp
src/engine/: Board.cpp  Controller.cpp  Move.cpp  MoveGenerator.cpp  Pieces.cpp
src/gui/: Controller.cpp  Renderer.cpp
test/: BoardTests.cpp  GeneratorTests.cpp  MoveTests.cpp  TestMain.cpp
